tests/typing/error-bad_op_arity/float.expected
File "tests/typing/error-bad_op_arity/float.smt2", line 3, character 13-34:
Error Bad arity for operator 'to_fp': expected 1 or 2 arguments but got 3
